Use a super high z-index (for now) on all the dialogs as it seems to fix flickering

--- a/code/ui/CustomTooltip.scss
+++ b/code/ui/CustomTooltip.scss
@@ -3,6 +3,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 1001;
 
     .container {
         backdrop-filter-blur: 8px;
