--- a/code/ui/RadialMenu.scss
+++ b/code/ui/RadialMenu.scss
@@ -3,6 +3,7 @@
     height: 600px;
     background-color: rgba( 0 0 0 0.8 );
     backdrop-filter-blur: 24px;
+    z-index: 1001;
     border-radius: 50%;
     box-shadow: 0 0 32px 16px rgba( 50 50 50 0.5 );
     border: 2px white solid;
