--- a/code/ui/crafting/Crafting.scss
+++ b/code/ui/crafting/Crafting.scss
@@ -6,6 +6,7 @@
     display: flex;
     pointer-events: all;
     backdrop-filter-blur: 24px;
+    z-index: 1000;
     background-color: rgba(0, 0, 0, 0.9);
     transition: backdrop-filter-blur 0.15s ease-in;
     transition: opacity 0.15s ease-in;
